src/test/error/access2.lns
class Super {
    pri let val1: int;
    pro let val2: int;
    pub let val3: int;

    pri fn func1() {
    }
    pro fn func2() {
    }
    pub fn func3() {
    }
}

class Sub extend Super {
    pub fn __init() {
        super( 1, 2, 3 );
    }
    pub fn test() mut {
        self.val3 = 0;
        self.val2 = 0;
        self.val1 = 0;
    }
}
